Added body and footer

--- a/index.html
+++ b/index.html
@@ -40,6 +40,132 @@
         </p>
 </article>
 
+<hr></hr> <!-- Requires styling to make it thin -->
+
+<section>
+  <h2>More from A List Apart</h2>
+<ul>
+  <div> <!-- class this sucker up so that all elements afterwards can be styled the same way -->
+    <li>
+      <h3><a href="http://alistapart.com/article/learning-from-lego-a-step-forward-in-modular-web-design">Learning from Lego: A Step Forward in Modular Web Design</a></h3>
+      <p class"">by <a href="http://alistapart.com/author/samantha-zhang">Samantha Zhang</a></p>
+      <p class="">Pesky nesting issues are a thing of the past if we envision web content blocks as the tops of Lego bricks.</p>
+      <p class="">><a href="http://alistapart.com/topic/code">Code</a> · <a href="http://alistapart.com/article/learning-from-lego-a-step-forward-in-modular-web-design">December 22, 2016</a></p>
+    </li>
+    <li>
+      <h3><a href="http://alistapart.com/article/demystifying-public-speaking">Demystifying Public Speaking</a></h3>
+      <p class="">by <a href="http://alistapart.com/author/larahogan">Lara Hogan</a></p>
+      <p class="">The inside-out path to becoming a public speaker</p>
+      <p class=""><a href="http://alistapart.com/topic/code">Industry &amp; Business</a> · <a href="http://alistapart.com/article/demystifying-public-speaking">December 15, 2016</a></p>
+    </li>
+    <li>
+      <h3><a href="http://alistapart.com/article/managing-ego">Managing Ego</a></h3>
+      <p class="">by <a href="http://alistapart.com/author/brandongregory">Brandon Gregory</a></p>
+      <p class="">Issues underlying workplace drama aren’t totally
+        random—Brandon Gregory shows us how to stabilize ourselves and our relationships.</p>
+      <p class=""><a href="http://alistapart.com/topic/process">Process</a> · <a href="http://alistapart.com/article/managing-ego">December 13, 2016</a></p>
+    </li>
+    <!--How would you handle this, ads -->
+    <li><img src=""></li>
+  </ul>
+
+<div class="">
+  A List Apart explores the design, development, and meaning of web content,
+  with a special focus on web standards and best practices. Explore our <a href="http://alistapart.com/articles">articles</a> or find out more <a href="http://alistapart.com/about"about us</a>.
+</div>
+</section>
+<footer>
+
+<nav class="">
+<ul>
+  <li>About</li>
+  <li>Authors</li>
+  <li>Masthead</li>
+  <li>Style Guide</li>
+  <li>Contact</li>
+  <li>Sponsorships</li>
+</ul>
+</nav>
+
+<nav class="">
+  <ul>
+    <li>Follow us:</li>
+    <li>RSS</li>
+    <li>·</li>
+    <li>Email</li>
+    <li>·</li>
+    <li>Facebook</li>
+    <li>·</li>
+    <li>Google+</li>
+    <li>·</li>
+    <li>Twitter</li>
+  </ul>
+</nav>
+
+<div class="">
+<ul>
+  <li>
+
+    <div class="">
+    <img src="">
+    </div>
+
+    <div class="">
+    <p class="">A Book Apart</p>
+    <p>Mobile First &amp; Responsive Web Design bundle.</p>
+    <p>Buy both and save!</p>
+    <p><a href="">Order now</a></p>
+    </div>
+
+    </li>
+
+
+  <li>
+
+    <div class="">
+    <img src="">
+    </div>
+
+    <div class="">
+    <p class="">An Event Apart</p>
+    <p>Three days of design, code, and content for people who make websites.</p>
+    <p><a href="">See the 2016 schedule</a></p>
+    </div>
+
+  </li>
+</ul>
+</div>
+
+<div class="">
+<p> ISSN 1534-0295 · Copyright © 1998–2017 A List Apart &amp; Our Authors</p>
+<div class="">
+<ul>
+  <li><a href="http://alistapart.com/about/copyright">Permissions &amp; Copyright</a></li>
+    <li>·</li>
+    <li><a href="http://webtype.com/">Fonts by Webtype</a></li>
+    <li>·</li>
+    <li><a href="http://alistapart.com/tools/log-in">Log In</a></li>
+    <li>·</li>
+    <li><a href="http://alistapart.com/tools/register">Register</a></li>
+  </ul>
+</div>
+</div>
+
+<div class="">
+<a href="http://aneventapart.com/"><img src=""></a>
+<a href="http://abookapart.com/"><img src=""></a>
+<a href="https://arcustech.com/"><img src=""></a>
+</div>
+
+<p class="">*For people who make websites</p>
+</footer>
+
+
+
+  </div>
+
+
+</section>
 
   </body>
 </html>
