Made formatting edits

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 <nav>
 <div>
   <ul> <!--Need to build out the hover css afterwards -->
-    <li><a href="http://alistapart.com/"><img src="URL"></a></li> <!--> Need to add the correct image URL / file into my folder -->
+    <li><a href="http://alistapart.com/"><img src="URL"></a></li>
     <li><a href="http://alistapart.com/articles">Articles</a></li>
     <li><a href="http://alistapart.com/events">Events</a></li>
     <li><a href="http://alistapart.com/topics">Topics</a></li>
-    <li><a href="http://alistapart.com/about/contribute">Write for us</a><li>
+    <li><a href="http://alistapart.com/about/contribute">Write for us</a></li>
   </ul>
 </div>
-
 <div><!--code for search box --></div>
 </nav>
 
@@ -28,15 +27,15 @@
   </section>
   <section>
     <h1>The Imbalance of Culture Fit</h1> <!-- This may need some additional CSS to make it look decent -->
-    <h4>by <em><a href="http://alistapart.com/author/mattgriffin">Matt Griffin</a></em> ·
-      <a href="http://alistapart.com/article/the-imbalance-of-culture-fit#comments"11 Comments </a></h4>
+    <h4>by <strong><a href="http://alistapart.com/author/mattgriffin">Matt Griffin</a></strong> ·
+      <a href="http://alistapart.com/article/the-imbalance-of-culture-fit#comments">11 Comments</a></h4>
         <p>
           Part of getting to a better place in the new year is recognizing where we have sway, and
           going past our own discomfort to create positive change in ourselves and in the world. Those
           of us who have a role in the hiring process can do better by thinking critically about culture fit.
           Matt Griffin challenges us to consider whether it actually creates the kind of team that’s the best for the enterprise,
           or mostly serves to make us comfortable by surrounding us with people largely like ourselves in ways that aren’t relevant
-          to the business."
+          to the business.
         </p>
 </article>
 
@@ -50,12 +49,12 @@
       <h3><a href="http://alistapart.com/article/learning-from-lego-a-step-forward-in-modular-web-design">Learning from Lego: A Step Forward in Modular Web Design</a></h3>
       <p class"">by <a href="http://alistapart.com/author/samantha-zhang">Samantha Zhang</a></p>
       <p class="">Pesky nesting issues are a thing of the past if we envision web content blocks as the tops of Lego bricks.</p>
-      <p class="">><a href="http://alistapart.com/topic/code">Code</a> · <a href="http://alistapart.com/article/learning-from-lego-a-step-forward-in-modular-web-design">December 22, 2016</a></p>
+      <p class=""><a href="http://alistapart.com/topic/code">Code</a> · <a href="http://alistapart.com/article/learning-from-lego-a-step-forward-in-modular-web-design">December 22, 2016</a></p>
     </li>
     <li>
       <h3><a href="http://alistapart.com/article/demystifying-public-speaking">Demystifying Public Speaking</a></h3>
       <p class="">by <a href="http://alistapart.com/author/larahogan">Lara Hogan</a></p>
-      <p class="">The inside-out path to becoming a public speaker</p>
+      <p class="">The inside-out path to becoming a public speaker.</p>
       <p class=""><a href="http://alistapart.com/topic/code">Industry &amp; Business</a> · <a href="http://alistapart.com/article/demystifying-public-speaking">December 15, 2016</a></p>
     </li>
     <li>
@@ -70,8 +69,8 @@
   </ul>
 
 <div class="">
-  A List Apart explores the design, development, and meaning of web content,
-  with a special focus on web standards and best practices. Explore our <a href="http://alistapart.com/articles">articles</a> or find out more <a href="http://alistapart.com/about"about us</a>.
+  <p>A List Apart explores the design, development, and meaning of web content,
+  with a special focus on web standards and best practices. Explore our <a href="http://alistapart.com/articles">articles</a> or find out more <a href="http://alistapart.com/about">about us.</a></p>
 </div>
 </section>
 <footer>
